# test_for_emsdk

./: CMakeLists.txt  README.md  SimpleHTTPServer.bat  emcmake.bat  emmake.bat  emsdk_shell.html  main.c  preload.bat  test_for_emsdk.code-workspace  test_sdl.c
files_data/: test.txt
include/: test_sdl.h
